--- a/quiz-authoring-tool/src/pages/Components/LeftPane/LeftPane.css
+++ b/quiz-authoring-tool/src/pages/Components/LeftPane/LeftPane.css
@@ -1,7 +1,78 @@
 #questionName{
 	      font-family: oswald;
     font-size: 20px;
+        margin-left: 50px;
 }
+#checkcheckbox{
+    display: block;
+}
+.checkcontainer {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkcontainer input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom checkbox */
+.checkcheckmark {
+        margin-left: 15px;
+        margin-top: 25px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: indianred;
+}
+
+/* On mouse-over, add a grey background color */
+.checkcontainer:hover input ~ .checkcheckmark {
+    background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkcontainer input:checked ~ .checkcheckmark {
+    background-color: indianred;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkcheckmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.checkcontainer input:checked ~ .checkcheckmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkcontainer .checkcheckmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
 /* Style the tab */
 .tab {
     border: 1px solid #ccc;
@@ -26,7 +97,7 @@
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-    background-color: lightcoral;
+    background-color: lightgreen;
 }
 
 /* Create an active/current "tab button" class */
