--- a/quiz-authoring-tool/src/pages/Components/RightPane/RightPane.css
+++ b/quiz-authoring-tool/src/pages/Components/RightPane/RightPane.css
@@ -14,3 +14,77 @@
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
+.checkcheckmarkoptions{
+        margin-left: 0px;
+        margin-top: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: indianred;
+}
+#checkcheckboxoptions{
+    display: block;
+}
+.checkcontaineroptions {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkcontaineroptions input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom checkbox */
+
+
+/* On mouse-over, add a grey background color */
+.checkcontaineroptions:hover input ~ .checkcheckmarkoptions {
+    background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkcontaineroptions input:checked ~ .checkcheckmarkoptions {
+    background-color: indianred;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkcheckmarkoptions:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.checkcontaineroptions input:checked ~ .checkcheckmarkoptions:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkcontaineroptions .checkcheckmarkoptions:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+#addimage{
+	    background-color: #007bff;
+    color: white;
+}
