--- a/quiz-authoring-tool/src/pages/Components/RightPane/RightPane.css
+++ b/quiz-authoring-tool/src/pages/Components/RightPane/RightPane.css
@@ -1,6 +1,10 @@
 #rightPane{
     float: left;
 }
+#headingRight{
+	font-family: oswald;
+    color: indianred;
+}
 #FIELDSET_18{
 	margin-top: 30px;
 }
