--- a/quiz-authoring-tool/src/pages/Components/RightPane/TextBox.css
+++ b/quiz-authoring-tool/src/pages/Components/RightPane/TextBox.css
@@ -1,15 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald');
-
+/*@import url('https://fonts.googleapis.com/css?family=Oswald');
+*/
 #questiontextBox{
   width: inherit;
-      font-family: oswald;
     font-size: 20px;
     color: green;
 }
 
 #answertextBox{
   width: inherit;
-      font-family: oswald;
     font-size: 20px;
     color:#0062cc;
 }
